<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/browser_actions_bg_grey"
    tools:context=".main_side_bar">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar8"
        android:layout_width="406dp"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        android:background="#3554EF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="184dp"
        android:layout_height="81dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="589dp"
        android:background="#3554EF"
        android:text="@string/M_user"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="277dp"
        android:layout_height="52dp"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="509dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/M_Event"
        android:textColor="@color/browser_actions_text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="277dp"
        android:layout_height="52dp"
        android:layout_marginTop="222dp"
        android:layout_marginBottom="457dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/M_Room"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="277dp"
        android:layout_height="52dp"
        android:layout_marginTop="274dp"
        android:layout_marginBottom="405dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/M_Restaurants"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView64"
        android:layout_width="277dp"
        android:layout_height="399dp"
        android:layout_marginTop="326dp"
        android:layout_marginBottom="6dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/M_Employee"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="99dp"
        android:layout_height="81dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="586dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/e_3" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="278dp"
        android:layout_height="28dp"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="563dp"
        android:background="#3554EF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>